--- a/package.json
+++ b/package.json
@@ -2,5 +2,5 @@
   "name": "ui-bootstrap-collapse",
   "version": "0.12.0",
   "description": "Bower repository for ui bootstrap collapse",
-  "main": "ui-bootstrap-collapse.js",
+  "main": "ui-bootstrap-collapse.js"
 }
